Revision history for Perl module WebService::Linode

{{$NEXT}}

0.19  2014-02-09 00:28:23 EST
    - depend on just LWP::Protocol::https instead of LWP::UserAgent,
      Crypt::SSLeay, & Mozilla::CA, thanks Christopher Meng (cicku)
    - Update FSF mailing address in LICENSE, thanks Christopher Meng (cicku)

0.18  2014-02-04 11:36:24 EST
    - API 2 factor authentication support, see:
    <https://blog.linode.com/2014/02/03/linode-api-multiple-keys-and-two-factor/>

0.17  2014-01-24 09:30:48 EST
    - remove deprecated getDomainIDbyName & getDomainResourceIDbyName
    - allow setting API url via ENV var LINODE_API_URL
    - paymentterm is optional for linode.create and linode.clone
    - update examples/dyndns.pl to remove use of deprecated functions

0.16  2014-01-06 09:59:02 EST
    - useragent arg to constructor for custom user agent header

0.15  2013-11-07 12:02:21 EST
    - Treat error code 0 as OK
    - Update to latest API spec:
        - New optional argument for domain_create & domain_update:
            lpm_displaygroup
        - New optional arguments for nodebalancer_config_create and
          nodebalancer_config_update:
            ssl_cert, ssl_key
    - Add deprecation warning when calling getDomainIDbyName &
      getDomainResourceIDbyName

0.14  2013-10-23 11:04:39 EDT
    - Add Mozilla::CA to dependencies.

0.13  2013-09-28 20:05:23 EDT
    - No functional changes in this release.
    - Update link to Linode API docs
    - Clean up POD a bit, remove required/optional parameter headings when list
      is empty
    - https://github.com/mikegrb/WebService-Linode/pull/2 to update older
      change log entries to CPAN::Changes::Spec, thanks @neilbowers

0.12  2013-09-25 14:58:18 EDT
    - Upstream API Changes
        - New methods:
            - Prefixed by account_: estimateinvoice, paybalance, updatecard
            - Prefixed by linode_:  mutate, webconsoletoken
        - New optional args for linode_update: